fixed footer and not on mobile

--- a/src/app/(components)/(NotOnMobile)/NotOnMobile.css
+++ b/src/app/(components)/(NotOnMobile)/NotOnMobile.css
@@ -1,17 +1,19 @@
-@media screen and (max-width: 1100px) {
+.not-on-mobile p {
+    margin-top: 300px;
+}
+
+@media screen and (max-width: 900px) {
     .not-on-mobile {
         position: absolute;
         width: 100vw;
-        height: 100dvh;
+        height: 5000px;
         background: var(--tertiary-color);
         z-index: 1;
         display: flex;
-        justify-content: center;
-        align-items: center;
     }
 }
 
-@media screen and (min-width: 1101px) {
+@media screen and (min-width: 901px) {
     .not-on-mobile {
         display: none;
     }
